# KalmanFilter

./: .gitignore  CMakeLists.txt  INSTALL.txt  Readme.md  Readme.txt
examples/: CMakeLists.txt
examples/src/: main.cpp  test2.m
examples/src/EKFilter/: ekfilter.cpp
examples/src/Example/: example.cpp  plane.h  simple_plane.cpp  simple_plane.h
examples/src/KMatrix/: kmatrix.cpp
examples/src/KVector/: kvector.cpp
examples/src/MFile/: MFile.cpp  MFile.h  test.cpp  test2.m
include/kalman/: ekfilter.hpp  ekfilter_impl.hpp  kfilter.hpp  kmatrix_impl.hpp  kvector_impl.hpp
src/: Doxyfile.in
